# Mod-op-rq-ventes

./: GUIDE_UTILISATEUR 1.md
photo-retouch-ai/: .gitignore  README.md  requirements.txt
photo-retouch-ai-mobile/: .gitignore  README.md  briefcase.toml  build_apk.sh  buildozer.spec  pyproject.toml  requirements.txt
photo-retouch-ai-mobile/src/photoretouch_ai/: __init__.py  __main__.py
photo-retouch-ai-mobile/src/photoretouch_ai/app/: __init__.py  utils.py
photo-retouch-ai-mobile/src/photoretouch_ai/app/processing/: __init__.py  background.py  clone_stamp.py  denoise.py  object_removal.py  restore.py  super_resolution.py
photo-retouch-ai/app/: __init__.py  main.py
photo-retouch-ai/app/pages/: 01_🎯_Gommage_et_Clonage.py  __init__.py
photo-retouch-ai/app/processing/: __init__.py  enhancers.py
photo-retouch-ai/scripts/: __init__.py  download_models.py
